--- a/client/src/assets/tailwind.css
+++ b/client/src/assets/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .cvrsebtn {
+        @apply font-yeseva text-white
+        bg-curse-green border-none rounded-full py-1.5 px-5
+    }
+}
