--- a/client/src/assets/tailwind.css
+++ b/client/src/assets/tailwind.css
@@ -7,4 +7,7 @@
         @apply font-yeseva text-white
         bg-curse-green border-none rounded-full py-1.5 px-5
     }
+    .cvrseFlavorText {
+
+    }
 }
